Mps list screen

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -92,7 +92,7 @@
 		
 		<!-- All app pages go here -->
 		
-		<div class="home-tpl">
+		<div class="home-tpl hidden">
 
 			<a href="javascript:void(0);" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 
@@ -1306,6 +1306,116 @@
 			</div>
 		</div>
 		<!-- END news-tpl-detail-preview -->
+
+
+
+		<div class="mps-tpl">
+			<div class="bar bar-header">
+		   		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+				<h1 class="title">Народни представители</h1>
+				<button class="search-btn button button-icon">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+				</button>
+			</div>
+			
+			<div class="row search-row">
+				<div class="col">
+					<div class="search-wrapper">
+						<input type="text" placeholder="Търси парламентарен контрол" class="search-field" />
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col content-wrapper search-opened">
+
+					<div class="row section-tabs">
+					  <div class="col tab active">
+					  	<div class="flag-active"></div>
+					  	А-Я
+					  </div>
+					  <div class="col tab">
+					  	<div class="flag-active"></div>
+					  	ПГ
+					  </div>
+					  <div class="col col-33 tab">
+					  	<div class="flag-active"></div>
+					  	Комисии
+					  </div>
+					  <div class="col col-33 tab">
+					  	<div class="flag-active"></div>
+					  	Район
+					  </div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+<!-- 					
+<div class="row short-preview">
+	<div class="col">
+		<div class="row">
+			<h2 class="title">Законопроект за изменение и допълнение на Гражданския процесуален кодекс</h2>
+		</div>
+		<div class="row">
+			<div class="col-67 description-labels">
+				<div class="label">Вносители:</div>
+				<div class="txt">СМИЛЯНА НИКОЛОВА НИТОВА-КРЪСТЕВА, СПАС ЯНЕВ ПАНЧЕВ, СИЯНА АТАНАСОВА ФУДУЛОВА, ТАТЯНА ИВАНОВА ...</div>
+			</div>
+			<div class="col-33">
+				<div class="custom-row">
+					<div class="date">12.04.2014</div>
+				</div>
+				<div class="custom-row">
+					<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div> -->
+					
+				</div>
+			</div>
+			
+			<div class="bar bar-footer">					
+				<button class="back-btn button button-icon">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+				</button>
+				<button class="button button-icon ion-ios7-gear"></button>
+			</div>
+		</div>
+		<!-- END bills-tpl -->
+
+
 
 
 		<div class="options-tpl hidden">
