--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -1309,7 +1309,7 @@
 
 
 
-		<div class="mps-tpl">
+		<div class="mps-tpl hidden">
 			<div class="bar bar-header">
 		   		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Народни представители</h1>
@@ -1379,30 +1379,6 @@
 							</div>
 						</div>
 					</div>
-
-<!-- 					
-<div class="row short-preview">
-	<div class="col">
-		<div class="row">
-			<h2 class="title">Законопроект за изменение и допълнение на Гражданския процесуален кодекс</h2>
-		</div>
-		<div class="row">
-			<div class="col-67 description-labels">
-				<div class="label">Вносители:</div>
-				<div class="txt">СМИЛЯНА НИКОЛОВА НИТОВА-КРЪСТЕВА, СПАС ЯНЕВ ПАНЧЕВ, СИЯНА АТАНАСОВА ФУДУЛОВА, ТАТЯНА ИВАНОВА ...</div>
-			</div>
-			<div class="col-33">
-				<div class="custom-row">
-					<div class="date">12.04.2014</div>
-				</div>
-				<div class="custom-row">
-					<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-				</div>
-			</div>
-		</div>
-	</div>
-</div> -->
-					
 				</div>
 			</div>
 			
@@ -1414,6 +1390,287 @@
 			</div>
 		</div>
 		<!-- END bills-tpl -->
+
+
+
+		<div class="mp-groups-tpl hidden">
+			<div class="bar bar-header">
+		   		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+				<h1 class="title">Народни представители</h1>
+				<button class="search-btn button button-icon">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+				</button>
+			</div>
+			
+			<div class="row search-row">
+				<div class="col">
+					<div class="search-wrapper">
+						<input type="text" placeholder="Търси парламентарен контрол" class="search-field"/>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col content-wrapper search-opened">
+
+					<div class="row section-tabs">
+					  <div class="col tab">
+					  	<div class="flag-active"></div>
+					  	А-Я
+					  </div>
+					  <div class="col tab active">
+					  	<div class="flag-active"></div>
+					  	ПГ
+					  </div>
+					  <div class="col col-33 tab">
+					  	<div class="flag-active"></div>
+					  	Комисии
+					  </div>
+					  <div class="col col-33 tab">
+					  	<div class="flag-active"></div>
+					  	Район
+					  </div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">ПП ГЕРБ</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">93</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Коалиция за България</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">82</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Движениеза права и свободи</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">36</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Партия АТАКА</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">23</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Нечленуващи в ПГ</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">5</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			
+			<div class="bar bar-footer">					
+				<button class="back-btn button button-icon">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+				</button>
+				<button class="button button-icon ion-ios7-gear"></button>
+			</div>
+		</div>
+		<!-- END mp-groups-tpl -->
+
+		<div class="mp-committees-tpl hidden">
+			<div class="bar bar-header">
+		   		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+				<h1 class="title">Народни представители</h1>
+				<button class="search-btn button button-icon">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+				</button>
+			</div>
+			
+			<div class="row search-row">
+				<div class="col">
+					<div class="search-wrapper">
+						<input type="text" placeholder="Търси парламентарен контрол" class="search-field"/>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col content-wrapper search-opened">
+
+					<div class="row section-tabs">
+					  <div class="col tab">
+					  	<div class="flag-active"></div>
+					  	А-Я
+					  </div>
+					  <div class="col tab">
+					  	<div class="flag-active"></div>
+					  	ПГ
+					  </div>
+					  <div class="col col-33 tab active">
+					  	<div class="flag-active"></div>
+					  	Комисии
+					  </div>
+					  <div class="col col-33 tab">
+					  	<div class="flag-active"></div>
+					  	Район
+					  </div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Комисия по икономическата политика и туризъм</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">19</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Комисия по енергетика</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">19</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			
+			<div class="bar bar-footer">					
+				<button class="back-btn button button-icon">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+				</button>
+				<button class="button button-icon ion-ios7-gear"></button>
+			</div>
+		</div>
+		<!-- END mp-committees-tpl -->
+
+
+		<div class="mp-area-tpl">
+			<div class="bar bar-header">
+		   		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+				<h1 class="title">Народни представители</h1>
+				<button class="search-btn button button-icon">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+				</button>
+			</div>
+			
+			<div class="row search-row">
+				<div class="col">
+					<div class="search-wrapper">
+						<input type="text" placeholder="Търси парламентарен контрол" class="search-field"/>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col content-wrapper search-opened">
+
+					<div class="row section-tabs">
+					  <div class="col tab">
+					  	<div class="flag-active"></div>
+					  	А-Я
+					  </div>
+					  <div class="col tab">
+					  	<div class="flag-active"></div>
+					  	ПГ
+					  </div>
+					  <div class="col col-33 tab">
+					  	<div class="flag-active"></div>
+					  	Комисии
+					  </div>
+					  <div class="col col-33 tab active">
+					  	<div class="flag-active"></div>
+					  	Район
+					  </div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Благоевград</h2>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Бургас</h2>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">Варна</h2>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			
+			<div class="bar bar-footer">					
+				<button class="back-btn button button-icon">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+				</button>
+				<button class="button button-icon ion-ios7-gear"></button>
+			</div>
+		</div>
+		<!-- END mp-area-tpl -->
 
 
 
