--- a/www/index.html
+++ b/www/index.html
@@ -779,7 +779,7 @@
 		<div class="row search-row">
 			<div class="col hidden" id="searchBoxMPs">
 				<div class="search-wrapper">
-					<input type="text" placeholder="Търси парламентарен контрол" class="search-field" id="txtSearchMPs" />
+					<input type="text" placeholder="Търси народни представители" class="search-field" id="txtSearchMPs" />
 				</div>
 			</div>
 		</div>
@@ -855,7 +855,7 @@
 		<div class="row search-row">
 			<div class="col hidden" id="searchBoxAreas">
 				<div class="search-wrapper">
-					<input type="text" placeholder="Търси парламентарен контрол" class="search-field" id="txtSearchAreas" />
+					<input type="text" placeholder="Търси народни представители" class="search-field" id="txtSearchAreas" />
 				</div>
 			</div>
 		</div>
@@ -907,6 +907,78 @@
 	</div>
 </script>
 <!-- END mp-area-tpl -->
+
+
+<!-- mp-groups-tpl -->
+<script id="mp-groups-tpl" type="text/x-handlebars-template">
+	<div class="mp-groups-tpl">
+
+		<div class="bar bar-header">
+			<a href="javascript:void(0)" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+			<h1 class="title">Народни представители</h1>
+			<button class="search-btn button button-icon" id="btnSearchGroups">
+				<img src="assets/img/search-icon.png" alt="ico" class="ico">
+			</button>
+		</div>
+		
+		<div class="row search-row">
+			<div class="col hidden" id="searchBoxGroups">
+				<div class="search-wrapper">
+					<input type="text" placeholder="Търси народни представители" class="search-field" id="txtSearchGroups" />
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col content-wrapper" id="scrollingContent">
+
+				<div class="row section-tabs">
+					<div class="col tab" id="mpTabAZ">
+						<div class="flag-active"></div>
+						А-Я
+					</div>
+					<div class="col tab active" id="mpTabGroups">
+						<div class="flag-active"></div>
+						ПГ
+					</div>
+					<div class="col col-33 tab" id="mpTabComms">
+						<div class="flag-active"></div>
+						Комисии
+					</div>
+					<div class="col col-33 tab" id="mpTabAreas">
+						<div class="flag-active"></div>
+						Район
+					</div>
+				</div>
+
+				{{#each groups}}
+					<div class="row short-preview">
+						<div class="col">
+							<div class="row">
+								<h2 class="name">ПП ГЕРБ</h2>
+							</div>
+							<div class="row">
+								<ul class="col info">
+									<li><span class="bold">93</span> народни представители</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+				{{/each}}
+
+			</div>
+		</div>
+
+		<div class="bar bar-footer">
+			<button class="back-btn button button-icon" id="footerBackButton">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>
+			<button class="button button-icon ion-ios7-gear" id="footerSettingsButton"></button>
+		</div>
+	</div>
+</script>
+<!-- END mp-groups-tpl -->
 
 
 
@@ -1013,6 +1085,7 @@
 <script src="js/BillsView.js"></script>
 <script src="js/MPsView.js"></script>
 <script src="js/VotingAreasView.js"></script>
+<script src="js/ParlamStructsView.js"></script>
 <script src="js/OptionsView.js"></script>
 
 <script src="lib/snap.js"></script>
