--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -1475,7 +1475,7 @@
 
 
 
-		<div class="mp-groups-tpl hidden">
+		<div class="mp-groups-tpl">
 			<div class="bar bar-header">
 			 		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Народни представители</h1>
@@ -1676,7 +1676,7 @@
 		<!-- END mp-committees-tpl -->
 
 
-		<div class="mp-area-tpl">
+		<div class="mp-area-tpl hidden">
 			<div class="bar bar-header">
 			 		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Народни представители</h1>
