--- a/www/index.html
+++ b/www/index.html
@@ -1081,12 +1081,12 @@
                             <ul class="col detail-info">
                                 <li><span class="label">Дата на раждане:</span><span class="txt">{{dateOfBirth}}</span></li>
                                 <li><span class="label">Месторождение:</span><span class="txt">{{placeOfBirth}}</span></li>
-                                <li><span class="label">E-mail:</span><span class="txt">adrian.asenov@parliament.bg</span></li>
-                                <li><span class="txt">ПП „Атака“ 7.30%</span></li>
-                                <li><span class="label">Изборен район:</span><span class="txt">12-МОНТАНА</span></li>
-                                <li><span class="label">Eзици:</span><span class="txt">Английски, руски</span></li>
-                                <li><span class="label">професия:</span><span class="txt">икономист, юрист</span></li>
-                                <li><span class="label">семейно положение:</span><span class="txt">Женен</span></li>
+                                <li><span class="label">E-mail:</span><span class="txt"><a href="mailto:{{email}}">{{email}}</a></span></li>
+                                <li><span class="label">Политическа сила:</span><span class="txt">{{politicalForce}}</span></li>
+                                <li><span class="label">Изборен район:</span><span class="txt">{{izbRajon}}</span></li>
+                                <li><span class="label">Eзици:</span><span class="txt">{{langs}}</span></li>
+                                <li><span class="label">професия:</span><span class="txt">{{profession}}</span></li>
+                                <li><span class="label">семейно положение:</span><span class="txt">{{maritalStatus}}</span></li>
                             </ul>
                         </div>
                     </div>
@@ -1095,43 +1095,35 @@
                 <div class="row info-section">
                     <h2 class="section-title">Парламентарна дейност</h2>
                 </div>
+				{{#each structs}}
                 <div class="row short-preview info-section">
                     <div class="col">
                         <div class="row">
-                            <h2 class="name">42-ро Народно събрание</h2>
+                            <h2 class="name">{{name}}</h2>
                         </div>
                         <div class="row">
                             <ul class="col info">
-                                <li><span class="bold">член</span>21/05/2013 - 21/05/2013</li>
+                                <li><span class="bold">{{position}}</span> {{sdate}} - {{edate}}</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="row short-preview info-section">
-                    <div class="col">
-                        <div class="row">
-                            <h2 class="name">Комисия по правни въпроси</h2>
-                        </div>
-                        <div class="row">
-                            <ul class="col info">
-                                <li><span class="bold">член</span>19/06/2013 - до момента</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+				{{/each}}
 
                 <div class="row info-section">
                     <h2 class="section-title">Внесени законопроекти</h2>
                 </div>
+				{{#each bills}}
                 <div class="row short-preview info-section">
                     <div class="col">
                         <div class="row">
-                            <h2 class="name">Законопроект за допълнение на Закона за корпоративното
-подоходно облагане</h2>
+                            <h2 class="name">
+								<a class="external-link" href="{{link}}">{{billName}}</a>
+							</h2>
                         </div>
                     </div>
                 </div>
-
+				{{/each}}
 
             </div>
         </div>
