--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -135,7 +135,7 @@
 
 										{{#each docs}}
 											<li>
-												<a  href="javascript:openUrlInExternal('{{link}}')" class="file-link">{{name}}</a>
+												<a href="javascript:openUrlInExternal('{{link}}')" class="file-link">{{name}}</a>
 											</li>
 										{{/each}}
 
@@ -1118,7 +1118,7 @@
                     <div class="col">
                         <div class="row">
                             <h2 class="name">
-								<a class="external-link" href="{{link}}">{{billName}}</a>
+								<a class="external-link" href="javascript:openUrlInExternal('{{link}}')">{{billName}}</a>
 							</h2>
                         </div>
                     </div>
