--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -294,7 +294,7 @@
 			</div>
 		</div>
 
-		<div class="row topMargin50px">
+		<div class="row" style="margin-top: 50px;">
 			<div class="col content-wrapper" id="scrollingContent">
 				{{#each committee}}			
 				<div class="row short-preview committeeListItem" data-list-item-id="{{cid}}">
