top padding and fixed position on tabs

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -642,7 +642,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row" style="margin-top: 50px;">
+			<div class="row">
 				<div class="col content-wrapper">
 					<div class="row short-preview">
 						<div class="col">
@@ -1085,7 +1085,7 @@
 		
 		
 		
-		<div class="news-tpl-detail-preview">
+		<div class="news-tpl-detail-preview hidden">
 			<div class="bar bar-header">
 				<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Преглед на новина</h1>
@@ -1309,7 +1309,7 @@
 
 
 
-		<div class="mps-tpl hidden">
+		<div class="mps-tpl">
 			<div class="bar bar-header">
 			 		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Народни представители</h1>
