--- a/platforms/android/assets/www/staticHTML.html
+++ b/platforms/android/assets/www/staticHTML.html
@@ -642,7 +642,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row" style="margin-top: 50px;">
+			<div class="row">
 				<div class="col content-wrapper">
 					<div class="row short-preview">
 						<div class="col">
@@ -1085,7 +1085,7 @@
 		
 		
 		
-		<div class="news-tpl-detail-preview">
+		<div class="news-tpl-detail-preview hidden">
 			<div class="bar bar-header">
 				<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Преглед на новина</h1>
@@ -1309,7 +1309,7 @@
 
 
 
-		<div class="mps-tpl hidden">
+		<div class="mps-tpl">
 			<div class="bar bar-header">
 			 		<a href="#" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 				<h1 class="title">Народни представители</h1>
@@ -1323,12 +1323,7 @@
 					<div class="search-wrapper">
 						<input type="text" placeholder="Търси парламентарен контрол" class="search-field" />
 					</div>
-				</div>
-			</div>
-			
-			<div class="row">
-				<div class="col content-wrapper search-opened">
-
+					
 					<div class="row section-tabs">
 						<div class="col tab active">
 							<div class="flag-active"></div>
@@ -1345,6 +1340,143 @@
 						<div class="col col-33 tab">
 							<div class="flag-active"></div>
 							Район
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<!-- Този вариант на div-а е при скрита лента за търсене. Падинга трябва да иде в стила на content-wrapper-a -->
+				<div class="col content-wrapper" style="padding-top: 130px !important">
+				<!-- Този вариант на div-а е при видима лента за търсене. Падинга трябва да иде в стила search-opened -->
+				<!-- <div class="col content-wrapper search-opened">  -->
+
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+
+					<div class="row short-preview">
+						<div class="profile-image" style="background-image: url(http://www.parliament.bg/images/Assembly/1616.png)"></div>
+						<div class="col">
+							<div class="row">
+								<h2 class="name">МИХАИЛ РАЙКОВ МИКОВ</h2>
+							</div>
+							<div class="row">
+								<ul class="col col-67 info">
+									<li>ПП „Атака“ 7.30%</li>
+									<li>Изборен район: 5-ВИДИН</li>
+								</ul>
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
 						</div>
 					</div>
 
